--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div><a href="references/">Colors</a></div>
         <div><a href="project/">Audience</a></div>
     </nav>
-
+<main>
 <h3>Site Purpose</h3>
     
     <p>
@@ -47,7 +47,13 @@
 
     <img src="images/ocobotree.png" alt="Ocobo Tree Image">
 
+</main>
+<footer>
+    <script src="js/script.js"></script>
+    <a href="https://aazcuy.github.io/webfrontend230/">| Home</a>
 
+<div id="lastModif"></div>
+<button class="button" onclick="lastEdit()">See Last Modified</button>
 
 </body>
 </html>
