--- a/color-scheme.html
+++ b/color-scheme.html
@@ -18,7 +18,7 @@
 <body>
     
     <header>
-        <h1>Ibague Chamber of Commerce</h1>
+        <h1>Color Scheme</h1>
     </header>
 
     <nav>
@@ -28,23 +28,47 @@
         <div><a href="target-audience.html">Audience</a></div>
     </nav>
 <main>
-<h3>Site Purpose</h3>
-    
-    <p>
-        This site's purpose is to gather business owners that are interested in joining
-        an association where people that have similar interests work together to promote and protect 
-        such interests.
-    </p>
-
-<h3>Domain</h3>
-
-    <p>
-        www.ibaguechamber.com
-    </p>
+<h3>Colors</h3>
 
 <h3>Logo</h3>
 
-    <img src="images/ocobotree.png" alt="Ocobo Tree Image">
+    <img src="images/color-palette.jpg" alt="Color Palette">
+
+<h4>Logo</h4>
+<p><div id="pink-color"> HEX color: #DB4FBA</div>
+    <br>
+    <div id="dark-green-color"> HEX color: #1F2421</div>
+</p>
+
+<h4>Headings</h4>
+<p>
+    <div id="dark-green-color"> Text: HEX color: #1F2421</div>
+    <br>
+    <div id="light-green-color"> Background: HEX color: #9CC5A1</div>
+</p>
+
+<h4>Paragraphs</h4>
+<p>
+    <div id="dark-green-color"> HEX color: #1F2421</div>
+
+</p>
+
+<h4>Header and Footer</h4>
+<p>
+    <div id="dark-green-color"> Text: HEX color: #1F2421</div>
+    <br>
+    <div id="light-green-color"> Background: HEX color: #9CC5A1</div>
+</p>
+
+<h4>Accent Color</h4>
+<p>
+    <div id="pink-color"> HEX color: #DB4FBA</div>
+</p>
+
+<h4>Page Background</h4>
+<p>
+    <div id="white-color">HEX color: #FFFFFF</div>
+</p>
 
 </main>
 <footer>
