--- a/target-audience.html
+++ b/target-audience.html
@@ -22,10 +22,10 @@
     </header>
 
     <nav>
-        <div><a href="./">Home</a></div>
+        <div><a href="index.html">Home</a></div>
         <div><a href="sandbox/">Typography</a></div>
-        <div><a href="references/">Colors</a></div>
-        <div><a href="project/">Audience</a></div>
+        <div><a href="color-scheme.html">Colors</a></div>
+        <div><a href="target-audience.html">Audience</a></div>
     </nav>
 <main>
 <h3>Target Audience</h3>
