--- a/color-scheme.html
+++ b/color-scheme.html
@@ -23,7 +23,7 @@
 
     <nav>
         <div><a href="index.html">Home</a></div>
-        <div><a href="sandbox/">Typography</a></div>
+        <div><a href="typography.html">Typography</a></div>
         <div><a href="color-scheme.html">Colors</a></div>
         <div><a href="target-audience.html">Audience</a></div>
     </nav>
