--- a/typography.html
+++ b/typography.html
@@ -18,7 +18,7 @@
 <body>
     
     <header>
-        <h1>Ibague Chamber of Commerce</h1>
+        <h1>Typography</h1>
     </header>
 
     <nav>
@@ -28,23 +28,27 @@
         <div><a href="target-audience.html">Audience</a></div>
     </nav>
 <main>
-<h3>Site Purpose</h3>
-    
-    <p>
-        This site's purpose is to gather business owners that are interested in joining
-        an association where people that have similar interests work together to promote and protect 
-        such interests.
+<h3>Fonts</h3>
+
+<h4 id="baskerville-text">Libre Baskerville</h4>
+
+    <p id="baskersville-text">
+        Lorem ipsum dolor sit amet consectetur adipiscing elit eu habitant arcu leo est nostra mauris, 
+        hendrerit fusce a ultrices aptent maecenas elementum vestibulum nisl eros duis malesuada enim. 
+        Diam pretium fames fringilla tortor ullamcorper cras porttitor dapibus cursus conubia, 
+        nisi ultrices urna proin fermentum litora vitae sem. Aliquet tellus libero lacus consequat nisi erat suscipit pharetra mollis, 
+        fames donec non nascetur congue ut accumsan curabitur, tortor nibh egestas cras vel per porttitor dictum.
     </p>
 
-<h3>Domain</h3>
+<h4 id="source-sans-text">Source Sans Pro</h4>
 
-    <p>
-        www.ibaguechamber.com
-    </p>
-
-<h3>Logo</h3>
-
-    <img src="images/ocobotree.png" alt="Ocobo Tree Image">
+<p id="source-sans-text">
+    Lorem ipsum dolor sit amet consectetur adipiscing elit eu habitant arcu leo est nostra mauris, 
+    hendrerit fusce a ultrices aptent maecenas elementum vestibulum nisl eros duis malesuada enim. 
+    Diam pretium fames fringilla tortor ullamcorper cras porttitor dapibus cursus conubia, 
+    nisi ultrices urna proin fermentum litora vitae sem. Aliquet tellus libero lacus consequat nisi erat suscipit pharetra mollis, 
+    fames donec non nascetur congue ut accumsan curabitur, tortor nibh egestas cras vel per porttitor dictum.
+</p>
 
 </main>
 <footer>
