--- a/color-scheme.html
+++ b/color-scheme.html
@@ -30,20 +30,18 @@
 <main>
 <h3>Colors</h3>
 
-<h3>Logo</h3>
-
-    <img src="images/color-palette.jpg" alt="Color Palette">
+    <img src="images/color-palette.jpg" alt="Color Palette" id="palette-colors">
 
 <h4>Logo</h4>
 <p><div id="pink-color"> HEX color: #DB4FBA</div>
-    <br>
+    <hr>
     <div id="dark-green-color"> HEX color: #1F2421</div>
 </p>
 
 <h4>Headings</h4>
 <p>
     <div id="dark-green-color"> Text: HEX color: #1F2421</div>
-    <br>
+    <hr>
     <div id="light-green-color"> Background: HEX color: #9CC5A1</div>
 </p>
 
@@ -56,7 +54,7 @@
 <h4>Header and Footer</h4>
 <p>
     <div id="dark-green-color"> Text: HEX color: #1F2421</div>
-    <br>
+    <hr>
     <div id="light-green-color"> Background: HEX color: #9CC5A1</div>
 </p>
 
