--- a/typography.html
+++ b/typography.html
@@ -30,19 +30,21 @@
 <main>
 <h3>Fonts</h3>
 
-<h4 id="baskerville-text">Libre Baskerville</h4>
 
-    <p id="baskersville-text">
+<h4>Libre Baskerville</h4>
+<div class="baskerville-text">
+    <p>
         Lorem ipsum dolor sit amet consectetur adipiscing elit eu habitant arcu leo est nostra mauris, 
         hendrerit fusce a ultrices aptent maecenas elementum vestibulum nisl eros duis malesuada enim. 
         Diam pretium fames fringilla tortor ullamcorper cras porttitor dapibus cursus conubia, 
         nisi ultrices urna proin fermentum litora vitae sem. Aliquet tellus libero lacus consequat nisi erat suscipit pharetra mollis, 
         fames donec non nascetur congue ut accumsan curabitur, tortor nibh egestas cras vel per porttitor dictum.
     </p>
+</div>
 
-<h4 id="source-sans-text">Source Sans Pro</h4>
+<h4 class="source-sans-text">Source Sans Pro</h4>
 
-<p id="source-sans-text">
+<p class="source-sans-text">
     Lorem ipsum dolor sit amet consectetur adipiscing elit eu habitant arcu leo est nostra mauris, 
     hendrerit fusce a ultrices aptent maecenas elementum vestibulum nisl eros duis malesuada enim. 
     Diam pretium fames fringilla tortor ullamcorper cras porttitor dapibus cursus conubia, 
